--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-#word {
+#word, .word {
 	text-align: center;
 	border-top: 3px solid #333;
 	padding-bottom: 10px;
@@ -19,14 +19,19 @@
 
 
 #left {
-
+	position: absolute;
+	left: 30%;
 }
+
 #mid {
 	color:  red;
+	position: absolute;
+	left: 30%
 
 }
 #right {
-
+	position: absolute;
+	left: 30%;
 }
 
 #controls {
